--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^8.2.5",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "promise-mysql2": "^1.0.0"
   }
 }
